[tool.poetry]
name = "firedantic"
version = "0.3.0"
description = "Pydantic base models for Firestore"
authors = ["Digital Living International Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/trungtin/firedantic"
packages = [
    {include="firedantic", from="."}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.1.1"
google-cloud-firestore = "^2.11.1"
grpcio = "1.55.3"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
invoke = "^2.2.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pytest = "^7.4.0"
pydevd-pycharm = "^222.3345.131"
pytest-asyncio = "0.21.1"
black = "^22.6.0"
watchdog = "^2.1.9"
pre-commit = "^3.3.3"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
  # you can override these either by seting TEST_FIRESTORE_EMULATOR_HOST (only for tests)
  # or by setting FIRESTORE_EMULATOR_HOST (for tests and local development)
  # in env files
  "D:TEST_FIRESTORE_EMULATOR_HOST=localhost:8686",
  "D:FIRESTORE_EMULATOR_HOST={TEST_FIRESTORE_EMULATOR_HOST}",
]
